<resources>
    <string name="app_name">Dialogs</string>
    <string name="action_settings">Settings</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="cloudy">cloudy</string>
    <string name="paper">paper</string>
    <string name="ok">OK</string>
</resources>
