<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.spider.dialogs.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/musicL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onMusicButton"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_media_pause"
            android:tint="#AAA"
            android:clickable="true"
            app:backgroundTint="#333" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/musicL"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/custom_dialog"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/dialogCustom"
            android:onClick="onDialogCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alertL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/customL"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alert_dialog"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/alertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAlert"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/alertL"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/progress_dialog"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/progressDialog"
            android:onClick="onProcessDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email"
            app:fabSize="mini" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timePickerL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressL"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time_picker"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/timePickerDialog"
            android:onClick="onTimePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email"
            app:fabSize="mini" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/datePickerL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/timePickerL"
        android:gravity="end|bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_picker"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/datePickerDialog"
            android:onClick="onDatePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_dialog_email"
            app:fabSize="mini" />

    </LinearLayout>


</RelativeLayout>
